--- a/src/style.css
+++ b/src/style.css
@@ -18,9 +18,11 @@ a {
   text-decoration: none;
 }
 
-button {
-  border: none;
+input, button, textarea {
+  padding: 0.5rem;
+  border: 1px solid #999;
   font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
 }
 
 /*LOGIN*/
@@ -280,6 +282,36 @@ div.container {
   margin: 0 auto;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
+}
+
+
+/* NEW POST */
+.new-post {
+  margin-bottom: 2rem;
+}
+
+.new-post-form {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.new-post-title {
+  padding: 1rem;
+  background-color: #eeeeee;
+}
+
+.new-post-label {
+  margin-bottom: 0.3rem;
+}
+
+.new-post-input {
+  margin-bottom: 1rem;
+}
+
+#new-post-button {
+  max-width: 8rem;
+  display: block;
 }
 
 /* PROFILE */
