--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-/* IMPORT FONTES */
+/* IMPORT FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 /* CSS RESET */
@@ -8,6 +8,7 @@
   box-sizing: border-box;
 }
 
+/* GENERAL STYLING */
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -23,6 +24,10 @@ input, button, textarea {
   border: 1px solid #999;
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
+}
+
+.hidden {
+  display: none;
 }
 
 /*LOGIN*/
@@ -90,6 +95,7 @@ div.container {
   height: 2.5rem;
   margin: 0 auto;
   padding: 0.5rem;
+  border: none;
   border-radius: 2px;
   background-color: #fff;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
@@ -290,7 +296,7 @@ div.container {
   margin-bottom: 2rem;
 }
 
-.new-post-form {
+#new-post-form {
   display: flex;
   flex-direction: column;
   padding: 1rem;
