--- a/src/style.css
+++ b/src/style.css
@@ -89,12 +89,12 @@ div.container {
 
 #btn-google {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  width: 13rem;
+  /* width: 15.5rem; */
   height: 2.5rem;
   margin: 0 auto;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   border: none;
   border-radius: 2px;
   background-color: #fff;
@@ -102,6 +102,7 @@ div.container {
 }
 
 .btn-login-icon {
+  margin-right: 0.8rem;
   width: 1.2rem;
   height: auto;
 }
