--- a/src/style.css
+++ b/src/style.css
@@ -101,13 +101,13 @@ div.container {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 }
 
-.btn-login-icon {
+.btn-google-icon {
   margin-right: 0.8rem;
   width: 1.2rem;
   height: auto;
 }
 
-.btn-login-text {
+.btn-google-text {
   font-size: 0.95rem;
   font-weight: 500;
   color: #757575;
