--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 /* IMPORT FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800&display=swap");
 
 /* CSS RESET */
 * {
@@ -10,20 +10,21 @@
 
 /* GENERAL STYLING */
 body {
-  background-color: #fdf5dd;
-  font-family: 'Work Sans', sans-serif;
+  background-color: #fdf4dd;
+  font-family: "Work Sans", sans-serif;
   font-size: 16px;
   color: #000;
 }
 
 a {
+  color: #000;
   text-decoration: none;
 }
 
 input,
 button,
 textarea {
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
 .hidden {
@@ -37,14 +38,9 @@ textarea {
 }
 
 /*LOGIN*/
-/* div.container {
-  width: 90vw;
-  height: 90vh;
-  margin: auto;
-  padding: 1rem;
-  margin-bottom: 3.5rem;
-  margin-top: 5rem;
-} */
+div.container {
+  padding: 0 2rem;
+}
 
 .bookshelf-logo {
   display: block;
@@ -64,11 +60,9 @@ textarea {
   max-width: 30rem;
   display: flex;
   flex-direction: column;
-  position:relative;
+  position: relative;
   top: -1.5rem;
   margin: 0 auto;
-  margin-bottom: 1rem;
-  padding: 0 2rem;
 }
 
 .label-login {
@@ -79,38 +73,55 @@ textarea {
 }
 
 .input-login {
-  background-color: #fdf5dd;
+  background-color: #fdf4dd;
   border: none;
   border-bottom: solid 1px #000;
   font-size: 1rem;
-  padding: 0.5rem 0;
+  padding: 0.3rem 0;
   outline: none;
 }
 
 .btn-login {
+  display: block;
+  width: 65vw;
   margin: 1rem auto;
-  padding: 0.6rem 2rem;
-  border: none;
+  padding: 0.5rem 1rem;
+  border: solid 3px #000;
   background-color: #000;
-  color: #fdf5dd;
+  color: #fdf4dd;
+  font-weight: 500;
   font-size: 1rem;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-login:hover {
+  background-color: #fdf4dd;
+  color: #000;
 }
 
 .alternative {
+  margin: 0.7rem 0;
   text-align: center;
 }
 
 .btn-google {
+  width: 65vw;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 2.5rem;
-  margin: 1rem auto;
+  margin: 0 auto;
   padding: 0.5rem 1rem;
   border: none;
+  color: #222;
   background-color: #fff;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  transition: 0.3s ease-in-out;
+}
+
+.btn-google:hover {
+  background-color: #000;
+  color:#fdf4dd;
 }
 
 .btn-google-icon {
@@ -121,13 +132,23 @@ textarea {
 
 .btn-google-text {
   font-size: 0.9rem;
-  font-weight: 400;
-  color: #757575;
+  font-weight: 500;
 }
 
-.sign-up-login {
+.sign-up-question {
+  font-size: 0.9rem;
   text-align: center;
-  margin-bottom: 0.5rem;
+  line-height: 1.5rem;
+}
+
+.sign-up-link {
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.sign-up-link:hover {
+  border-bottom: solid 2px #000;
 }
 
 /* SIGN UP */
@@ -411,7 +432,7 @@ textarea {
 
 /*FIRST REVIEW*/
 
- .review-container {
+.review-container {
   width: 100vw;
   height: 35vh;
   margin: auto;
