--- a/src/style.css
+++ b/src/style.css
@@ -39,40 +39,55 @@ textarea {
 }
 
 .required {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: bold;
-  color: #d31900;
+  color: #da815e;
 }
 
 /*LOGIN*/
 div.container {
-  /* padding: 0 2rem; */
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  height: 100vh;
 }
 
 .bookshelf-logo {
-  display: block;
-  position: relative;
-  top: -1rem;
-  margin: 0 auto;
-  max-width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow : 1;
+  padding: 1.5rem 0;
 }
 
-.black-bg {
+.logo-login {
+  max-width: 30vw;
+  height: auto;
+  margin: 0 auto;
+}
+
+.logo-book {
+  margin-bottom: 0.5rem;
+}
+
+.logo-text {
+  max-width: 43vw;
+}
+
+.form-bg {
   width: 100%;
-  position: absolute;
-  top: 43vh;
-  bottom: 0;
-  padding-top: 1.5rem;
-  background-color: #000;
+  flex-grow : 1;
+  padding-top: 1.2rem;
+  padding-bottom: 3rem;
+  background-color: #fdf4dd;
   border-radius: 4rem 0 0 0;
+  box-shadow: 0 0 15px 4px rgba(0,0,0,0.15);
 }
 
 .form-login {
   max-width: 30rem;
   display: flex;
   flex-direction: column;
-  /* position: relative;
-  top: -1.5rem; */
   margin: 0 auto;
   padding: 0 2rem;
 }
@@ -81,18 +96,18 @@ div.container {
   margin-top: 1rem;
   font-size: 0.8rem;
   font-weight: 600;
-  color: #fdf4dd;
+  color: #000;
   text-transform: uppercase;
 }
 
 .input-login {
   border: none;
-  border-bottom: solid 1px #fdf4dd;
+  border-bottom: solid 1px #000;
   outline: none;
   padding: 0.3rem 0;
-  background-color: #000;
+  background-color: #fdf4dd;
   font-size: 1rem;
-  color: #fdf4dd;
+  color: #000;
 }
 
 .btn-login {
@@ -100,17 +115,18 @@ div.container {
   width: 65vw;
   margin: 1rem auto;
   padding: 0.5rem 1rem;
-  border: solid 3px #fdf4dd;
-  background-color: #fdf4dd;
-  color: #000;
+  border: solid 2px #000;
+  border-radius: 2rem;
+  background-color: #000;
+  color: #fdf4dd;
   font-weight: 500;
   font-size: 1rem;
   transition: 0.3s ease-in-out;
 }
 
 .btn-login:hover {
-  background-color: #000;
-  color: #fdf4dd;
+  background-color: #fdf4dd;
+  color: #000;
 }
 
 .btn-google {
@@ -122,20 +138,21 @@ div.container {
   margin: 0 auto;
   margin-bottom: 1rem;
   padding: 0.5rem;
-  border: solid 3px #fdf4dd;
-  color: #222;
-  background-color: #fdf4dd;
+  border-radius: 2rem;
+  border: solid 2px #000;
+  color: #fdf4dd;
+  background-color: #000;
   transition: 0.3s ease-in-out;
 }
 
 .btn-google:hover {
-  background-color: #000;
-  color:#fdf4dd;
+  background-color: #fdf4dd;
+  color:#000;
 }
 
 .btn-google-icon {
   margin-right: 0.8rem;
-  width: 1.2rem;
+  width: 1rem;
   height: auto;
 }
 
@@ -145,21 +162,19 @@ div.container {
 }
 
 .sign-up-question {
-  color: #fdf4dd;
   font-size: 0.9rem;
   text-align: center;
   line-height: 1.5rem;
 }
 
 .sign-up-link {
-  color: #fdf4dd;
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
 }
 
 .sign-up-link:hover {
-  border-bottom: solid 2px #fdf4dd;
+  border-bottom: solid 2px #000;
 }
 
 /* SIGN UP */
