--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ textarea {
 }
 
 /*LOGIN*/
-div.container {
+.container-login {
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -96,7 +96,7 @@ div.container {
   padding: 0 2rem;
 }
 
-.label-login {
+.label-begin {
   margin-top: 1rem;
   font-size: 0.8rem;
   font-weight: 600;
@@ -104,7 +104,7 @@ div.container {
   text-transform: uppercase;
 }
 
-.input-login {
+.input-begin {
   border: none;
   border-bottom: solid 1px #000;
   outline: none;
@@ -114,7 +114,7 @@ div.container {
   color: #000;
 }
 
-.btn-login {
+.btn-begin {
   display: block;
   width: 65vw;
   margin: 1rem auto;
@@ -128,7 +128,7 @@ div.container {
   transition: 0.3s ease-in-out;
 }
 
-.btn-login:hover {
+.btn-begin:hover {
   background-color: #fdf4dd;
   color: #000;
 }
@@ -165,13 +165,13 @@ div.container {
   font-weight: 500;
 }
 
-.sign-up-question {
+.question-begin {
   font-size: 0.9rem;
   text-align: center;
   line-height: 1.5rem;
 }
 
-.sign-up-link {
+.link-begin {
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
@@ -179,61 +179,39 @@ div.container {
 
 
 /* SIGN UP */
-.icon-arrow {
-  font-size: 1.5rem;
-  margin: auto;
-  margin-left: 1rem;
-  color: #000;
+.container-sign-up {
+  padding: 1.5rem 0;
 }
 
-.header-sign-up {
-  display: inline;
+.icon-arrow {
+  font-size: 1.5rem;
+}
+
+.icon-arrow {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+
+.title-sign-up {
+  margin-top: 3rem;
+  margin-bottom: 0.5rem;
   text-align: center;
-  font-weight: normal;
-  font-size: 12px;
+  font-weight: 500;
+  font-size: 1.4rem;
 }
 
 .form-sign-up {
+  max-width: 30rem;
   display: flex;
   flex-direction: column;
-  margin: auto;
-  margin-top: 1rem;
-  width: 80vw;
-  margin-bottom: 1rem;
-}
-
-.label-sign-up-name,
-.label-sign-up-email,
-.label-sign-up-password,
-.label-confirm-password {
-  margin-top: 1rem;
-  margin-left: 1rem;
-}
-
-.input-sign-up-name,
-.input-sign-up-email,
-.input-sign-up-password,
-.input-confirm-password {
-  margin-top: 0.5rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  padding: 0.2rem;
-}
-
-.btn-sign-up {
-  width: 25vw;
   margin: 0 auto;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  padding: 0.5rem;
-}
-
-.option-sign-up {
-  text-align: center;
+  padding: 0 2rem;
 }
 
 .login-link {
   text-align: center;
+  line-height: 1.5rem;
 }
 
 /* FOOTER */
