--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
 html {
   height: 100%;
   width: 100%;
+  font-size: 15.5px;
 }
 
 body {
@@ -19,7 +20,6 @@ body {
   width: 100%;
   background-color: #fdf4dd;
   font-family: "Work Sans", sans-serif;
-  font-size: 16px;
   color: #000;
 }
 
@@ -38,8 +38,18 @@ textarea {
   font-family: "Work Sans", sans-serif;
 }
 
-.hidden {
-  display: none;
+.btn-base {
+  padding: 0.5rem 1rem;
+  border: solid 2px #000;
+  border-radius: 2rem;
+  background-color: #000;
+  color: #fdf4dd;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-base:hover {
+  background-color: #fdf4dd;
+  color: #000;
 }
 
 .required {
@@ -47,6 +57,11 @@ textarea {
   font-weight: bold;
   color: #da815e;
 }
+
+.hidden {
+  display: none;
+}
+
 
 /*LOGIN*/
 .container-login {
@@ -118,19 +133,8 @@ textarea {
   display: block;
   width: 65vw;
   margin: 1rem auto;
-  padding: 0.5rem 1rem;
-  border: solid 2px #000;
-  border-radius: 2rem;
-  background-color: #000;
-  color: #fdf4dd;
   font-weight: 500;
   font-size: 1rem;
-  transition: 0.3s ease-in-out;
-}
-
-.btn-begin:hover {
-  background-color: #fdf4dd;
-  color: #000;
 }
 
 .btn-google {
@@ -142,16 +146,6 @@ textarea {
   margin: 0 auto;
   margin-bottom: 1rem;
   padding: 0.5rem;
-  border-radius: 2rem;
-  border: solid 2px #000;
-  color: #fdf4dd;
-  background-color: #000;
-  transition: 0.3s ease-in-out;
-}
-
-.btn-google:hover {
-  background-color: #fdf4dd;
-  color: #000;
 }
 
 .btn-google-icon {
@@ -270,7 +264,7 @@ textarea {
   color: #fdf4dd;
 }
 
-/* FEED / POST */
+/* PAGES */
 .feed-main,
 .profile-main,
 .post-container {
@@ -278,20 +272,17 @@ textarea {
   margin-bottom: 4.5rem;
 }
 
-.title {
-  text-align: center;
-}
-
+/* POST COMPONENT */
 .review-post {
-  border: solid 1px #999;
-  margin: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 5.5rem;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 2rem;
 }
 
 .review-meta-info {
-  padding: 0.5rem;
-  border-bottom: solid 1px #999;
-  background-color: #e0e0e0;
+  padding: 1rem 1.5rem;
+  border-radius: 2rem 2rem 0 0;
+  background-color: #f5e1b3;
   font-weight: normal;
   font-size: 0.9rem;
 }
@@ -302,35 +293,42 @@ textarea {
 }
 
 .review-user-avatar {
-  width: 3rem;
+  width: 4rem;
   height: auto;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
   border-radius: 50%;
+  border: solid 2px #000;
 }
 
 .review-author-username {
-  font-size: 1rem;
-  font-weight: bold;
+  margin-bottom: 0.3rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: capitalize;
 }
 
 .review-date {
   display: block;
+  font-size: 0.8rem;
 }
 
-.edit-button,
-.save-button,
-.delete-button,
-.cancel-button,
+.top-icons-container {
+  text-align: center;
+  padding: 0.7rem 0;
+}
+
+.btn-post {
+  margin: 0 auto;
+  padding: 0.4rem 0.8rem;
+  font-weight: 400;
+  font-size: 0.8rem;
+}
+
 .edit-icon,
 .delete-icon,
 .cancel-icon,
 .check-icon {
   margin-right: 0.5rem;
-  font-size: 0.8rem;
-}
-
-.top-icons-container {
-  padding-top: 0.5rem;
 }
 
 .review-main-info {
@@ -344,7 +342,7 @@ textarea {
 
 #review-book-title,
 #review-book-author {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .editable-content {
@@ -415,14 +413,8 @@ textarea {
   display: block;
   width: 65vw;
   margin: 1rem auto;
-  padding: 0.5rem 0rem;
-  border: solid 2px #000;
-  border-radius: 2rem;
-  background-color: #000;
-  color: #fdf4dd;
   font-weight: 500;
   font-size: 1rem;
-  transition: 0.3s ease-in-out;
 }
 
 .btn-review:hover {
