--- a/src/style.css
+++ b/src/style.css
@@ -313,15 +313,20 @@ textarea {
 }
 
 .top-icons-container {
+  display: flex;
+  justify-content: flex-start;
   margin: 1rem 0 0.7rem 0;
-  text-align: center;
 }
 
 .btn-post {
-  margin: 0 auto;
+  margin-right: 0.8rem;
   padding: 0.4rem 0.8rem;
   font-weight: 400;
   font-size: 0.8rem;
+}
+
+.btn-post:hover {
+  background-color: #f5e1b3;
 }
 
 .edit-icon,
@@ -372,12 +377,18 @@ textarea {
   font-size: 1.3rem;
 }
 
-.like-icon:hover {
-  color: darkcyan;
+.like-icon-general {
+  color: #000;
+  transition: 0.3s ease-in-out;
+}
+
+.like-icon-general:hover,
+.like-icon.fas {
+  color: #da815e;
 }
 
 .current-user-like-icon {
-  color: #f5e1b3;
+  color: #000;
 }
 
 /*REVIEW*/
@@ -410,6 +421,10 @@ textarea {
   background-color: #f5e1b3;
   font-size: 1rem;
   color: #000;
+}
+
+.text-area-review {
+  line-height: 1.7rem;
 }
 
 .form-review {
