--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
 
+/* REFERÊNCIAS PARA MEDIA QUERIES */
+/*
+Mobile maior -- max-width: 600px
+Tablet retrato -- min-width: 601px
+Tablet paisagem e Desktop -- min-width: 900px
+*/
+
+
 /* CSS RESET */
 * {
   margin: 0;
@@ -75,7 +83,7 @@ textarea {
 .bookshelf-logo {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   flex-grow: 1;
   padding: 1.5rem 0;
 }
@@ -132,14 +140,14 @@ textarea {
 
 .btn-begin {
   display: block;
-  width: 65vw;
+  width: 16rem;
   margin: 1rem auto;
   font-weight: 500;
   font-size: 1rem;
 }
 
 .btn-google {
-  width: 65vw;
+  width: 16rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -227,16 +235,29 @@ textarea {
 }
 
 /* NAVBAR */
-.top-header {
+.responsive-wrap-navbar {
+  width: 100%;
+  max-width: 25rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  padding: 0 2rem;
+}
+
+.top-header {
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   background-color: #fdf4dd;
   box-shadow: 0 2px 15px 4px rgba(0, 0, 0, 0.15);
+}
+
+.responsive-wrap-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 25rem;
+  margin: 0 auto;
 }
 
 .logo-header {
@@ -287,6 +308,11 @@ textarea {
 
 
 /* POST COMPONENT */
+.post-container {
+  margin: 0 auto;
+  max-width: 28rem;
+}
+
 .review-post {
   margin-bottom: 5.5rem;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.15);
@@ -405,7 +431,7 @@ textarea {
   color: #000;
 }
 
-/*REVIEW*/
+/*REVIEW PAGE*/
 .container-review {
   padding: 1.5rem 0;
 }
@@ -451,7 +477,7 @@ textarea {
 
 .btn-review {
   display: block;
-  width: 65vw;
+  width: 13rem;
   margin: 1rem auto;
   font-weight: 500;
   font-size: 1rem;
@@ -472,39 +498,36 @@ textarea {
 .profile-cover {
   position: absolute;
   right: 0.5rem;
-  top: 4rem;
+  top: 5rem;
   height: 14.5rem;
 }
 
 .profile-user-info {
-  margin: 1.5rem 2rem 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 25rem;
+  margin: 21rem auto 5rem auto;
 }
 
 .user-name {
-  margin-top: 21rem;
-  margin-bottom: 4rem;
+  margin: 0 2rem 1rem 2rem;
   font-weight: 500;
   font-size: 1.4rem;
-  margin-bottom: 1rem;
 }
 
 .profile-favorite-quote {
+  max-width: 33rem;
+  margin: 0 2rem 1rem 2rem;
   padding: 1.5rem;
+  border-radius: 0.7rem;
   background-color: #f5e1b3;
 }
 
 .quote-text {
   font-family: "Caveat", cursive;
-  text-align: justify;
   margin-bottom: 0.7rem;
   font-size: 1.5rem;
-}
-
-.profile-user-posts-title {
-  display: inline-block;
-  margin: 0 1rem;
-  padding: 0.5rem;
-  border: solid 1px #999;
 }
 
 /*FIRST REVIEW*/
