--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@ Tablet retrato -- min-width: 601px
 Tablet paisagem e Desktop -- min-width: 900px
 */
 
-
 /* CSS RESET */
 * {
   margin: 0;
@@ -71,6 +70,11 @@ textarea {
   display: none;
 }
 
+@media (min-width: 900px) {
+  html {
+    font-size: 16.5px;
+  }
+}
 
 /*LOGIN*/
 .container-login {
@@ -178,6 +182,29 @@ textarea {
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
+}
+
+@media (min-width: 900px) {
+  .container-login {
+    flex-flow: row;
+  }
+
+  .bookshelf-logo {
+    padding: 0 3rem;
+    width: 50vw;
+  }
+
+  .logo-book {
+    max-width: 9rem;
+  }
+
+  .logo-text {
+    max-width: 13rem;
+  }
+
+  .form-login {
+    justify-content: center;
+  }
 }
 
 /* SIGN UP */
@@ -305,7 +332,6 @@ textarea {
   max-width: 15rem;
   height: auto;
 }
-
 
 /* POST COMPONENT */
 .post-container {
@@ -489,10 +515,9 @@ textarea {
 }
 
 /* PROFILE */
-
 .profile-header {
   margin-top: 3.5rem;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 .profile-cover {
